# icon-generator-temp

./: LICENSE  README.MD
test/: temp.md
test/icon-generator-temp-test/: temp.md
test/icon-generator-temp-test/icon-generator-temp-test-svg/: temp.md
test/icon-generator-temp-test/search/: temp.md
test/icon-generator-temp-test/search/1/src/: icon_generator_temp_test_search-window.c  icon_generator_temp_test_search-window.ui  meson.build
test/icon-generator-temp-test/search/2/: icon.generator.temp.test.search.json  meson.build
test/icon-generator-temp-test/search/2/src/: icon_generator_temp_test_search-window.c  icon_generator_temp_test_search-window.h  icon_generator_temp_test_search-window.ui  icon_generator_temp_test_search.gresource.xml  temp
test/icon-generator-temp-test/search/3/src/: element.ui  icon_generator_temp_test_search-window.c  icon_generator_temp_test_search.gresource.xml
test/icon-generator-temp-test/search/4/: temp.txt
test/icon-generator-temp-test/search/51/data/: icon.generator.temp.test.search.gschema.xml
test/icon-generator-temp-test/search/51/po/: meson.build
test/icon-generator-temp-test/search/51/src/: icon_generator_temp_test_search-window.c
test/icon-generator-temp-test/search/52/data/: icon.generator.temp.test.search.desktop.in
test/icon-generator-temp-test/search/52/src/: icon_generator_temp_test_search-window.c  icon_generator_temp_test_search-window.ui  icon_generator_temp_test_search.gresource.xml  main.c
test/icon-generator-temp-test/search/53/data/: meson.build
test/icon-generator-temp-test/search/53/po/: POTFILES
test/icon-generator-temp-test/search/53/src/: icon_generator_temp_test_search-window.c
test/icon-generator-temp-test/search/54/src/: icon_generator_temp_test_search-application.c  icon_generator_temp_test_search-window.c  icon_generator_temp_test_search-window.ui
test/icon-generator-temp-test/svg/drawsvg/1/: icon.generator.temp.test.svg.json  meson.build
test/icon-generator-temp-test/svg/drawsvg/1/src/: icon_generator_temp_test_svg-application.c  icon_generator_temp_test_svg-application.h  icon_generator_temp_test_svg-window.c  icon_generator_temp_test_svg-window.h  icon_generator_temp_test_svg-window.ui  icon_generator_temp_test_svg.gresource.xml  main.c  meson.build
test/icon-generator-temp-test/svg/drawsvg/2/221/src/: image_generator_temp_test_svg-application.c  image_generator_temp_test_svg-application.h  image_generator_temp_test_svg-window.c  image_generator_temp_test_svg-window.ui  image_generator_temp_test_svg.gresource.xml  meson.build
test/icon-generator-temp-test/svg/editsvg/23/: org.example.App.json
test/icon-generator-temp-test/svg/editsvg/231/src/: icon_generator_temp_test_editsvg-window.c  icon_generator_temp_test_editsvg-window.h  icon_generator_temp_test_editsvg-window.ui  icon_generator_temp_test_editsvg.gresource.xml  main.c  meson.build
(+40 files in other folders)
